...
        content: SingleChildScrollView(
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              TextField(
                controller: titleController,
                decoration: const InputDecoration(labelText: 'Title'),
              ),
              TextField(
                controller: descriptionController,
                decoration: const InputDecoration(labelText: 'Description'),
                maxLines: 3,
              ),
              DropdownButtonFormField<String>(
                value: selectedTag,
                items: const [
                  DropdownMenuItem(value: 'general', child: Text('General')),
                  DropdownMenuItem(
                      value: 'technical', child: Text('Technical')),
                  DropdownMenuItem(value: 'academic', child: Text('Academic')),
                ],
                onChanged: (value) {
                  if (value != null) {
                    selectedTag = value; // Update the variable directly
                  }
...
                          decoration: BoxDecoration(
                            color: const Color(0xFFFF8500), // Orange background
                            borderRadius:
                                BorderRadius.circular(20), // Rounded corners
                          ),
                          child: const Text(
                            'Ask',
                            style: TextStyle(color: Colors.white, fontSize: 16),
                          ),
                        ),
                      ),
                      Text(
                        'Welcome: ${widget.userFullName}',
...
